changed user operations
