# backend/docs/swagger.yaml
@@ -66,37 +66,25 @@ paths:
       summary: Guess a number
       tags:
       - game
-  /login:
-    post:
+  /users:
+    delete:
       consumes:
       - application/json
-      description: Authenticates user and sets a token in the cookie
-      parameters:
-      - description: User request
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/models.UserRequest'
+      description: Deletes a user by ID
       produces:
       - application/json
       responses:
         "200":
-          description: Login successful
-          schema:
-            $ref: '#/definitions/models.LoginResponse'
-        "400":
-          description: Invalid input
+          description: User deleted
           schema:
             $ref: '#/definitions/models.ErrorResponse'
-        "401":
-          description: Invalid credentials
+        "500":
+          description: Failed to delete user
           schema:
             $ref: '#/definitions/models.ErrorResponse'
-      summary: Login
+      summary: Delete User
       tags:
       - users
-  /users:
     get:
       consumes:
       - application/json
@@ -114,7 +102,7 @@ paths:
           description: Failed to fetch users
           schema:
             $ref: '#/definitions/models.ErrorResponse'
-      summary: List Users
+      summary: Get All Users
       tags:
       - users
     post:
@@ -146,31 +134,36 @@ paths:
       summary: Create User
       tags:
       - users
-  /users/{id}:
-    delete:
+    put:
       consumes:
       - application/json
-      description: Deletes a user by ID
+      description: Updates a user's information
       parameters:
-      - description: User ID
-        in: path
-        name: id
+      - description: User request
+        in: body
+        name: request
         required: true
-        type: string
+        schema:
+          $ref: '#/definitions/models.UserRequest'
       produces:
       - application/json
       responses:
         "200":
-          description: User deleted
+          description: User updated
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Invalid input
           schema:
             $ref: '#/definitions/models.ErrorResponse'
-        "500":
-          description: Failed to delete user
+        "404":
+          description: User not found
           schema:
             $ref: '#/definitions/models.ErrorResponse'
-      summary: Delete User
+      summary: Update User
       tags:
       - users
+  /users/{id}:
     get:
       consumes:
       - application/json
@@ -195,16 +188,12 @@ paths:
       summary: Get User
       tags:
       - users
-    put:
+  /users/login:
+    post:
       consumes:
       - application/json
-      description: Updates a user's information
+      description: Authenticates user and sets a token in the cookie
       parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: string
       - description: User request
         in: body
         name: request
@@ -215,18 +204,18 @@ paths:
       - application/json
       responses:
         "200":
-          description: User updated
+          description: Login successful
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/models.LoginResponse'
         "400":
           description: Invalid input
           schema:
             $ref: '#/definitions/models.ErrorResponse'
-        "404":
-          description: User not found
+        "401":
+          description: Invalid credentials
           schema:
             $ref: '#/definitions/models.ErrorResponse'
-      summary: Update User
+      summary: Login
       tags:
       - users
 swagger: "2.0"
